updated with latest lab files

--- a/roles/idm-dns_ad_setup/tasks/main.yml
+++ b/roles/idm-dns_ad_setup/tasks/main.yml
@@ -16,6 +16,6 @@
   ipatrust:
     ipaadmin_password: "{{ admin_password }}"
     realm: "{{ ad_domain }}"
-    admin: Administrator
+    admin: delegate
     password: "{{ ad_password }}"
     state: present
