--- a/roles/idm-users/tasks/main.yml
+++ b/roles/idm-users/tasks/main.yml
@@ -1,21 +1,20 @@
 ---
 # tasks file for idm-users
-- name: IdM test user creation
-  ipauser:
+- name: IdM user
+  ipauser: 
     ipaadmin_password: "{{ admin_password }}"
-    name: user{{ item }}
-    first: User
-    last: Test-{{ item }}
-    uid: "{{ item }}"
-    gid: "{{ item }}"
+    name: "{{ item.idm_name }}"
+    first: "{{ item.idm_first }}"
+    last: "{{ item.idm_last }}"
+    uid: "{{ item.id }}"
+    gid: "{{ item.id }}"
     password: "{{ user_password }}"
-    update_password: on_create
-  with_sequence: start={{ first_users }} end={{ last_users }}
-- name: IdM admin users
+  with_items: "{{ idm_users }}"
+- name: IdM admins
   ipauser:
     ipaadmin_password: "{{ admin_password }}"
     name: "{{ item.idm_name }}"
     first: "{{ item.idm_first }}"
     last: "{{ item.idm_last }}"
     password: "{{ admin_password }}"
-  with_items: "{{ idm_users }}"
+  with_items: "{{ idm_admins }}"
