--- a/roles/winUsers/tasks/main.yml
+++ b/roles/winUsers/tasks/main.yml
@@ -1,18 +1,49 @@
 ---
 # tasks file for winUsers
-- name: Create AD Group for IdM Integration
+# Creates groups for AD users that will have access to IdM
+- name: Create AD IdM users group for IdM integration
   ansible.windows.win_group:
-    name: "{{ ad_grp_name }}"
+    name: "{{ ad_grp_users }}"
     state: present
-- name: AD Users for IdM Integration
+- name: Create AD IdM admins group for IdM integration
+  ansible.windows.win_group:
+    name: "{{ ad_grp_admins }}"
+    state: present
+# Creates AD users that will have access to IdM and assigns to appropiate group
+- name: Create AD IdM user accounts for IdM integration
   community.windows.win_domain_user:
-    name: "{{ item.ad_user_name }}"
-    firstname: "{{ item.ad_user_first }}"
-    surname: "{{ item.ad_user_last }}"
+    name: "{{ item.ad_name }}"
+    firstname: "{{ item.ad_first }}"
+    surname: "{{ item.ad_last }}"
     password: "{{ ad_idm_password }}"
     state: present
     groups:
-      - "{{ ad_grp_name }}"
+      - "{{ ad_grp_users }}"
     domain_username: '{{ ad_netbios }}\Administrator'
     domain_password: "{{ admin_password }}"
   with_items: "{{ ad_idm_users }}"
+- name: AD admins for IdM integration
+  community.windows.win_domain_user:
+    name: "{{ item.ad_name }}"
+    firstname: "{{ item.ad_first }}"
+    surname: "{{ item.ad_last }}"
+    password: "{{ admin_password }}"
+    state: present
+    groups:
+      - "{{ ad_grp_admins }}"
+      - Enterprise Admins
+    domain_username: '{{ ad_netbios }}\Administrator'
+    domain_password: "{{ admin_password }}"
+  with_items: "{{ ad_idm_admins }}"
+# Creating DNS delegation Enterprise Admin user. Admin uses old hash so fails to connect with IdM.
+- name: Add AD Enterprise User
+  community.windows.win_domain_user:
+    name: delegate
+    firstname: DNS
+    surname: Delegation
+    password: "{{ admin_password }}"
+    state: present
+    groups:
+      - Enterprise Admins
+    domain_username: '{{ ad_netbios }}\Administrator'
+    domain_password: "{{ admin_password }}"
