--- a/idmLab.yaml
+++ b/idmLab.yaml
@@ -1,45 +1,50 @@
 ---
-## Must have both ansible.windows and community.windows collections installed
-## To Install run the following on the machine you are running Ansible on:
-## ansible-galaxy collection install ansible.windows
-## ansible-galaxy collection install community.windows
-## You mus also run the WinRM Memory Hotfix and WinRM Setup scripts on the Window server to allow WinRM to accept connections from Ansible
-## The doc is here: https://docs.ansible.com/ansible/latest/user_guide/windows_setup.html
-#- name: Configure Windows
-#  hosts: win
-#  roles:
-#    - role: winCreate
-#      state: present
-#    - role: winUsers
-#      state: present
-#    - role: winDelegate
-#      state: present
+# Please read the README.md file
+- name: Configure Windows
+  hosts: win
+  become_method: runas
+  become_user: Administrator
+  become: False
+  roles:
+    - role: winCreate
+      state: present
+    - role: winUsers
+      state: present
+    - role: winDelegate
+      state: present
+  tags: win
 - name: Configure Users
   hosts: all:!win
   become: True
   roles:
   - role: local_users
-    state: present
+  tags: locUsers
 ## Need to choose which method to update systems with.
-#- name: Subscribe systems to RH CDN
-#  hosts: all
-#  become: True
-#  roles:
-#  - role: subscribe-cdn
-#    state: present
+- name: Subscribe systems to RH CDN
+  hosts: all
+  become: True
+  roles:
+  - role: subscribe-cdn
+  tags: cdn
 - name: Subscribe systems to local satellite
   hosts: all:!win
   become: True
   roles:
   - role: subscribe-sat
-    state: present
-- name: Configure DNS on servers
-  hosts: all:!ipaserver:!win
-  gather_facts: false
+  tags: satloc
+- name: Update nameserver entry on ipareplcas and ipaclients
+  hosts: all:!ipaserver:!win:!others
   become: true
   roles:
-  - role: dns-resolve
-    state: present
+  - role: rhel-system-roles.network
+    vars:
+      crypto_policies_policy: "DEFAULT:AD-SUPPORT"
+      crypto_policies_reboot_required: True
+- name: Update Crypto policy for AD Trust
+  hosts: ipaserver:ipareplicas
+  become: true
+  roles:
+  - role: rhel-system-roles.crypto_policies
 ## Must have the ansible-freeipa rpm package installed.
 - name: Installs the IdM server
   import_playbook: /usr/share/doc/ansible-freeipa/playbooks/install-server.yml
@@ -52,54 +57,56 @@
     state: present
 - name: Installs the IdM replicas
   import_playbook: /usr/share/doc/ansible-freeipa/playbooks/install-replica.yml
-#- name: Installs the IdM clients
-#  import_playbook: /usr/share/doc/ansible-freeipa/playbooks/install-client.yml
-#- name: Sets up the AD trust.
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: True
-#  roles:
-#  - role: idm-dns_ad_setup
-#    state: present
-#- name: Create IdM users
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: True
-#  roles:
-#  - role: idm-test-users
-#    state: present
-#- name: Create external group for AD Users/Groups
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: True
-#  roles:
-#  - role: idm-groups
-#    state: present
-#- name: Create client host group
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: false
-#  roles:
-#  - role: idm-hostgroup
-#    state: present
-#- name: Create HBAC Rules
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: False
-#  roles:
-#  - role: idm-hbac
-#    state: present
-#- name: Enable sudo on clients
-#  hosts: ipaclients
-#  gather_facts: false
-#  become: true
-#  roles:
-#  - role: sudo-sssd
-#    state: present
-#- name: Create IdM SUDO rules
-#  hosts: ipaserver
-#  gather_facts: false
-#  become: False
-#  roles:
-#  - role: idm-sudo
-#    state: present
+  tags: replica
+- name: Installs the IdM clients
+  import_playbook: /usr/share/doc/ansible-freeipa/playbooks/install-client.yml
+  tags: clients
+- name: Sets up the AD trust.
+  hosts: ipaserver
+  gather_facts: false
+  become: True
+  roles:
+  - role: idm-dns_ad_setup
+  tags: adtrust
+- name: Create IdM users
+  hosts: ipaserver
+  gather_facts: false
+  become: True
+  roles:
+  - role: idm-users
+  tags: idmUsers
+- name: Create external group for AD Users/Groups
+  hosts: ipaserver
+  gather_facts: false
+  become: True
+  roles:
+  - role: idm-groups
+  tags: idmGrps
+- name: Create client host group
+  hosts: ipaserver
+  gather_facts: false
+  become: false
+  roles:
+  - role: idm-hostgroup
+  tags: hostGrp
+- name: Create HBAC Rules
+  hosts: ipaserver
+  gather_facts: false
+  become: False
+  roles:
+  - role: idm-hbac
+  tags: hbac
+- name: Enable sudo on clients
+  hosts: ipaclients
+  gather_facts: false
+  become: true
+  roles:
+  - role: sudo-sssd
+  tags: sudo
+- name: Create IdM SUDO rules
+  hosts: ipaserver
+  gather_facts: false
+  become: False
+  roles:
+  - role: idm-sudo
+  tags: sudo
